[ADD] backend user profile with company, skills and education
